@startuml

skinparam class {
	BackgroundColor #FFC0CB
	ArrowColor Black
	BorderColor Black
}

package tile{

    class Tile{
        + draw()
        + action()
    }

    class Wall{
        + draw()
        + action()
    }

    class Treasure{
        + draw()
        + action()
    }

    class Trap{
        + draw()
        + action()
    }

    abstract Effect{
        + {abstract} draw()
        + {abstract} action()
    }

    class TileFactory << (S,#FF7700) Singleton >>{
        + getWall(): Tile
        + getTrap(): Tile
        + getTreasure(): Tile
        + getEmptyTile(): Tile
    }

}

Wall --|> Effect
Effect --|> Tile
Effect --> "1" Tile : -decore
Trap --|> Effect
Treasure --|> Effect

TileFactory ..> Tile : create

@enduml